k8s_v2/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000 # port to access from any of others pods inside the cluster
      targetPort: 3000 # application port running in pod
